--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,21 +1,20 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "Nicole (Qingxuan) Wang"
+nickname: "Nicole"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
 image: "images/author/john.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
+  email: "qingxuanwang2026@u.northwestern.edu"
   phone: "+0123456789"
-  github: johndoe
-  linkedin: johndoe
-  researchgate: john-doe
+  github: Nicole-wqx
+  linkedin: www.linkedin.com/in/nicole-wang-872247296
 
 # some summary about what you do
 summary:
-  - I am a Developer
-  - I am a Devops
-  - I love servers
-  - I work on open-source projects
+  - I am a Marketing Analyst
+  - I am a Data Analyst and Storyteller
+  - I love Anmie
+  - I love to work with data
   - I love to work with some fun projects
