--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,10 +8,10 @@ section:
   template: sections/about.html
 
 # your designation
-designation: Software Engineer
+designation: MS in Integrated Marketing
 # your company information
 company:
-  name: Example Co.
+  name: Northwestern University.
   url: "https://www.example.com"
 
 # your resume. this file path should be relative to you "static" directory
