--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -13,8 +13,5 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - I am a Marketing Analyst
-  - I am a Data Analyst and Storyteller
-  - I love Anmie
-  - I love to work with data
-  - I love to work with some fun projects
+  - Marketing Analyst | Data Analyst | Data Storyteller
+  - Anime lover 🎮 | K-pop fan 🎶 | Certified foodie 🍜🍣🍰
