--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -3,7 +3,7 @@ name: "Nicole (Qingxuan) Wang"
 nickname: "Nicole"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
-image: "/Users/wqx/Desktop/US求职/portfolio/pic1.jpg"
+image: "assets/images/author/nicole.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
   email: "qingxuanwang2026@u.northwestern.edu"
