--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -43,24 +43,19 @@ socialLinks:
   icon: "fab fa-instagram"
   url: "https://www.instagram.com/nicole_x_wqx?igsh=b285aTV3NGk4bXp2&utm_source=qr"
 
-- name: Facebook
-  icon: "fab fa-facebook"
-  url: "#"
+- name: TikTok
+  icon: "fab fa-tiktok"
+  url: "https://www.tiktok.com/@leo_n0804?_t=ZS-8wYS6ETxReq&_r=1"
 
-- name: Mastadon
-  icon: "fab fa-mastodon"
-  url: "#"
-  rel: "me noopener"
-
-- name: ResearchGate
-  icon: "fab fa-researchgate"
-  url: "https://www.researchgate.net/profile/john-doe"
+- name: Photo
+  icon: "fa-solid fa-camera"
+  url: "https://www.instagram.com/nico.sphotodump/profilecard/?igsh=OHo4anN2cDRvazR5"
 
 # You can put custom buttons to link your relevant resources.
 # For example, you can put link for your resume.
 resourceLinks:
 - title: "My Resume"
-  url: "files/resume.pdf"
+  url: "files/nicole_resume.pdf"
 
 # Show your badges
 # You can show your verifiable certificates from https://www.credly.com.
