--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
 baseURL: https://Nicole-wqx.github.io
 
 languageCode: bn
-title: "John's Blog"
+title: "Nicole's Blog"
 
 # Use Hugo modules to add theme
 module:
@@ -25,11 +25,6 @@ languages:
     languageName: English
     title: "John's Blog"
     weight: 1
-  bn:
-    languageCode: bn
-    languageName: বাংলা
-    title: জনের ব্লগ
-    weight: 2
 # default language for the content
 defaultContentLanguage: en
 
@@ -65,9 +60,9 @@ params:
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   logo:
-    main: /images/site/main-logo.png
-    inverted: /images/site/inverted-logo.png
-    favicon: /images/site/favicon.png
+    main: /images/site/nicole-logo.png
+    inverted: /images/site/nicole-logo.png
+    favicon: /images/site/nicole-logo.png
 
   # GitHub repo of your site
   gitRepo: https://github.com/Nicole-wqx/Nicole-wqx.github.io
