--- a/hugo.yaml
+++ b/hugo.yaml
@@ -23,7 +23,7 @@ languages:
   en:
     languageCode: en
     languageName: English
-    title: "John's Blog"
+    title: "Nicole's Blog"
     weight: 1
 # default language for the content
 defaultContentLanguage: en
