--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -62,9 +62,9 @@ resourceLinks:
 # You can also show a circular bar indicating the level of expertise on a certain skill
 badges:
 - type: certification
-  name: Certified Kubernetes Security Specialist
-  url: "https://www.credly.com/org/the-linux-foundation/badge/exam-developer-certified-kubernetes-security-specialist"
-  badge: "https://images.credly.com/size/680x680/images/f4bf92ed-8985-40b2-bc07-2f9308780854/kubernetes-security-specialist-logo-examdev.png"
+  name: Certified Data Analyst
+  url: "https://www.coursera.org/account/accomplishments/professional-cert/certificate/GORFWL4PMCJQ"
+  badge: "assets/images/author/google.png"
 
 - type: certification
   name: Istio and IBM Cloud Kubernetes Service
