--- a/hugo.yaml
+++ b/hugo.yaml
@@ -53,16 +53,16 @@ enableEmoji: true
 # Site parameters
 params:
   # Background image of the landing page
-  background: /images/site/background.jpg
+  background: /images/site/pinkbg.jpg
   # Background image of the landing page for dark theme
   #darkBackground: /images/site/background.jpg
 
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   logo:
-    main: /images/site/nicole-logo.png
-    inverted: /images/site/nicole-logo.png
-    favicon: /images/site/nicole-logo.png
+    main: /images/site/logo2.png
+    inverted: /images/site/logo2.png
+    favicon: /images/site/logo2.png
 
   # GitHub repo of your site
   gitRepo: https://github.com/Nicole-wqx/Nicole-wqx.github.io
