--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -13,59 +13,52 @@ section:
 buttons:
 - name: All
   filter: "all"
-- name: Basic
-  filter: "basic"
-- name: Language
-  filter: "language"
-- name: Container
-  filter: "container"
-- name: Others
-  filter: "others"
+- name: Data Science
+  filter: "data"
+- name: Creativity
+  filter: "creativity"
+- name: Digital Marketing
+  filter: "marketing"
 
 # Your Skills.
 # Give a summary of you each skill in the summary section.
 skills:
-- name: Kubernetes
-  logo: /images/sections/skills/kubernetes.png
-  summary: "Capable of deploying, managing application on Kubernetes. Experienced in writing Kubernetes controllers for CRDs."
-  categories: ["container"]
-  url: "https://kubernetes.io/"
+- name: SQL
+  logo: /images/sections/skills/sql.png
+  summary: "Capable of deploying and managing data using SQL. Experienced in writing queries."
+  categories: ["data"]
 
-- name: Go Development
-  logo: /images/sections/skills/go.png
-  summary: "Using as the main language for professional development. Capable of writing scalable, testable, and maintainable program."
-  categories: ["basic", "language"]
-  url: "https://golang.org/"
+- name: R Programming Language
+  logo: /images/sections/skills/r.png
+  summary: "Proficient in segmentation, time series foreacasting, regression modeling, PSM, PCA, random forest, and other statistical or machine learning techniques."
+  categories: ["data"]
 
-- name: Cloud Computing
-  logo: /images/sections/skills/cloud.png
-  summary: "Worked with most of the major clouds such as GCP, AWS, Azure etc."
-  categories: ["others"]
+- name: Python
+  logo: /images/sections/skills/python.png
+  summary: "Capable of managing data and regression modeling using Python."
+  categories: ["data"]
 
-- name: Docker
-  logo: /images/sections/skills/docker.svg
-  summary: "Write most of the programs as dockerized container. Experienced with multi-stage, multi-arch build process."
-  categories: ["container"]
-  url: "https://www.docker.com/"
+- name: Photoshop
+  logo: /images/sections/skills/ps.png
+  summary: "Know basic skills in photo editing, creating posters, and other graphic design tasks using Adobe Photoshop."
+  categories: ["creativity","marketing"]
 
-- name: Prometheus
-  logo: /images/sections/skills/prometheus.png
-  summary: "Capable of setup, configure Prometheus metrics. Experienced with PromQL, AlertManager. Also, experienced with writing metric exporters."
-  categories: ["basic"]
-  url: "https://prometheus.io/"
+- name: Premiere Pro
+  logo: /images/sections/skills/pr.png
+  summary: "Experienced in video editing using Adobe PR."
+  categories: ["creativity","marketing"]
 
-- name: Linux
-  logo: /images/sections/skills/linux.png
-  summary: "Using as the main operating system. Capable of writing bash/shell scripts."
-  categories: ["others"]
+- name: SPSS
+  logo: /images/sections/skills/spss.png
+  summary: "Experienced with statistical analysis using SPSS."
+  categories: ["data"]
 
-- name: Git
-  logo: /images/sections/skills/git.png
-  summary: "Experienced with git-based development. Mostly, use Github. Also, have experience in working with GitLab."
-  categories: ["basic"]
-  url: "https://git-scm.com/"
+- name: Tableau
+  logo: /images/sections/skills/tableau.png
+  summary: "Capable of data visualization and data analysis using Tableau."
+  categories: ["data","creativity"]
 
-- name: C++
-  logo: /images/sections/skills/c++.png
-  summary: "Know basic C/C++ programming. Used for contest programming and problem solving."
-  categories: ["basic", "language"]
+- name: Google Analytics
+  logo: /images/sections/skills/google.png
+  summary: "Used for digital marketing projects."
+  categories: ["data", "marketing"]
