--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -9,7 +9,7 @@ contactInfo:
   email: "qingxuanwang2026@u.northwestern.edu"
   phone: "+0123456789"
   github: Nicole-wqx
-  linkedin: www.linkedin.com/in/nicole-wang-872247296
+  linkedin: nicole-wang-872247296
 
 # some summary about what you do
 summary:
