--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -55,11 +55,11 @@ projects:
   summary: The best way to write secure and reliable applications. Write nothing; deploy nowhere.
   tags: ["hobby", "fun"]
 
-- name: Toha
-  logo: /images/sections/projects/toha.png
-  image: /images/sections/projects/toha_website.png
-  role: Owner
-  timeline: "Jun 2019 - Present"
+- name: From Games to Chats
+  logo: /images/sections/projects/kakao.png
+  image: /images/sections/projects/anipang.png
+  role: Teamwork
+  timeline: "Class Project"
   repo: https://github.com/hossainemruz/toha
-  summary: A Hugo theme for personal portfolio.
+  summary: A Panel DID Study on How Gaming App Adoption Influences Social Media Usage.
   tags: ["hobby","hugo","theme","professional"]
