--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -35,7 +35,7 @@ projects:
   logo: /images/sections/projects/yelp.png
   image: /images/sections/projects/restaurant.png
   role: Developer
-  timeline: "Jun 2018 - Present"
+  timeline: "Class Project"
   repo: https://github.com/tensorflow/tensorflow
   #url: ""
   summary: An Open Source Machine Learning Framework for Everyone.
@@ -43,16 +43,18 @@ projects:
 
 - name: Digital Satisfaction Index
   logo: /images/sections/projects/dsi.png
+  image: /images/sections/projects/sat.png
   role: Assistant Research Analyst
-  timeline: "Jan 2017 - Nov 2017"
+  timeline: "Market Research"
   url: "https://www.example.com"
   summary: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eius reprehenderit animi suscipit autem eligendi esse amet aliquid error eum. Accusantium distinctio soluta aliquid quas placeat modi suscipit eligendi nisi.
   tags: ["academic","iot"]
 
 - name: Online Grocery Data Analysis
   logo: /images/sections/projects/grocery.png
-  role: Nothing
-  timeline: "Oct 2019 - Dec 2019"
+  image: /images/sections/projects/online.png
+  role: Developer
+  timeline: "Class Project"
   repo: https://github.com/kelseyhightower/nocode
   #url: ""
   summary: The best way to write secure and reliable applications. Write nothing; deploy nowhere.
