--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -14,10 +14,8 @@ buttons:
   filter: "all"
 - name: Professional
   filter: "professional"
-- name: Academic
-  filter: "academic"
-- name: Hobby
-  filter: "hobby"
+- name: Class Project
+  filter: "class"
 
 # your projects
 projects:
@@ -29,7 +27,7 @@ projects:
   repo: https://github.com/kubernetes/kubernetes # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Used XGBoost and random forest to find the key drivers of a viral TikTok video.
-  tags: ["professional", "kubernetes", "cloud"]
+  tags: ["class", "machine-learning"]
 
 - name: Popular Restaurants on Yelp 
   logo: /images/sections/projects/yelp.png
@@ -38,8 +36,8 @@ projects:
   timeline: "Class Project"
   repo: https://github.com/tensorflow/tensorflow
   #url: ""
-  summary: An Open Source Machine Learning Framework for Everyone.
-  tags: ["professional", "machine-learning"]
+  summary: Found the features that can predict a popular (5-star rating) restaurant on Yelp using XGBoost and Smoothers. 
+  tags: ["class", "machine-learning"]
 
 - name: Digital Satisfaction Index
   logo: /images/sections/projects/dsi.png
@@ -47,8 +45,8 @@ projects:
   role: Assistant Research Analyst
   timeline: "Market Research"
   url: "https://www.example.com"
-  summary: Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eius reprehenderit animi suscipit autem eligendi esse amet aliquid error eum. Accusantium distinctio soluta aliquid quas placeat modi suscipit eligendi nisi.
-  tags: ["academic","iot"]
+  summary: This market research project aims to measure the Digital Satisfaction Index (DSI) among U.S. internet users and analyze differences across key demographic groups. In addition, the study explores long-term trends in DSI and levels news trust over the past decade.
+  tags: ["professional"]
 
 - name: Online Grocery Data Analysis
   logo: /images/sections/projects/grocery.png
@@ -57,8 +55,8 @@ projects:
   timeline: "Class Project"
   repo: https://github.com/kelseyhightower/nocode
   #url: ""
-  summary: The best way to write secure and reliable applications. Write nothing; deploy nowhere.
-  tags: ["hobby", "fun"]
+  summary: A CRM data analysis to find the most profitable customer segments by evaluating purchasing behavior, lifetime value, and engagement metrics.
+  tags: ["class", "fun"]
 
 - name: From Games to Chats
   logo: /images/sections/projects/kakao.png
@@ -67,4 +65,4 @@ projects:
   timeline: "Class Project"
   url: "https://www.canva.com/design/DAGpanOZWHQ/34MbLalUkmNG-8wiFjtaXw/edit?utm_content=DAGpanOZWHQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
   summary: A Panel DID Study on How Gaming App Adoption Influences Social Media Usage.
-  tags: ["hobby","hugo","theme","professional"]
+  tags: ["class"]
