--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -63,6 +63,6 @@ projects:
   image: /images/sections/projects/anipang.png
   role: Teamwork
   timeline: "Class Project"
-  url: "https://www.canva.com/design/DAGpanOZWHQ/34MbLalUkmNG-8wiFjtaXw/edit?utm_content=DAGpanOZWHQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+  url: "https://github.com/Nicole-wqx/Kakao-From-Games-to-Chats"
   summary: A Panel DID Study on How Gaming App Adoption Influences Social Media Usage.
   tags: ["class"]
