--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -26,7 +26,7 @@ projects:
   timeline: "Class Project"
   url: https://github.com/kubernetes/kubernetes # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Used XGBoost and random forest to find the key drivers of a viral TikTok video.
+  summary: Used XGBoost and Random Forest Models to find the key drivers of a viral TikTok video.
   tags: ["class", "machine-learning"]
 
 - name: Popular Restaurants on Yelp 
