--- a/data/en/sections/achievements.yaml
+++ b/data/en/sections/achievements.yaml
@@ -10,15 +10,9 @@ section:
 
 # Your achievements achievements
 achievements:
-- title: Best Presenter
-  image: /images/sections/achievements/presenter.jpg
-  summary: Best presenter in the 2020 XYZ conference.
-- title: Champion
-  image: /images/sections/achievements/sport.jpg
-  summary: Champion in cycling inter-city cycling championship 2020.
-- title: Graduation
-  image: /images/sections/achievements/graduation-cap.jpg
-  summary: Received Bachelor of Science (B.Sc.) in Computer Science and Engineer from XYZ University.
+- title: Chief Director
+  image: /images/sections/achievements/newland.jpg
+  summary: Director of the 2021 University Welcome Event. 60-people big team, 20,000+ social media views, and 1,000+ audience.
 - title: Award Winner
-  image: /images/sections/achievements/woman-winner.jpg
-  summary: Wined best paper award at IEE Conference 2020.
+  image: /images/sections/achievements/unu.jpg
+  summary: United Nations University Macau Digital Technology and Sustainable Development Talent Programme
