--- a/data/en/sections/publications.yaml
+++ b/data/en/sections/publications.yaml
@@ -12,71 +12,51 @@ section:
 buttons:
 - name: All
   filter: "all"
-- name: "Machine Learning"
-  filter: "machinelearning"
-- name: "Image Processing"
-  filter: "image-processing"
-- name: Security
-  filter: "security"
+- name: "Quantitative"
+  filter: "quantitative"
+- name: "Qualitative"
+  filter: "qualitative"
 
 # your publications
 publications:
-- title: An Example Paper on Machine Learning
+- title: Communication Mechanisms and Prediction of Internet Rumors under the Background of Micro-spread
   publishedIn:
-    name: 2020 IEEE Region Symposium (TENSYMP)
-    date: 7 June 2020
-    url: https://example.com
+    name: 2022 IAMCR (International Association for Media and Communication Research) Conference
+    date: July 11 2022
+    url: https://iamcr.org/
   authors:
-  - name: Dr. Madman
-    url: https://example.com
-  - name: Dr. Lessmad
-    url: https://example.com
-  - name: Dr. Moremad
-    url: https://example.com
-  - name: Dr. Goodman
-    url: https://example.com
+  - name: Dr. Ruomu Miao
+  - name: Qingxuan Wang
   paper:
-    summary: Voluptate in id id voluptate laboris. Minim mollit aliquip sit aliqua ut exercitation voluptate eiusmod consequat pariatur sunt enim veniam. Velit esse tempor laboris anim tempor officia. Magna non labore duis do esse sit do ipsum culpa. Officia consequat id non duis culpa dolor. Excepteur magna non nostrud cupidatat aute aliqua aliquip.
-    url: https://example.com
-  categories: ["machinelearning","image-processing"]
-  tags: ["Machine Learning", "Autonomous Driving", "Computer Vision"]
+    summary: Building on infectious disease propagation model, this paper establishes the node state transformation rules that reflect real-world rumor dynamics. A new state “susceptible and temporarily immune” is introduced to construct an enhanced rumor propagation model. Based on this framework, an empirical analysis is conducted, and a cluster search algorithm is applied to optimize the model's performance. 
+    url: "files/MCS-final-abstracts-2022.pdf"
+  categories: ["quantitative"]
+  tags: ["Susceptible-Infected-Recovered model", "Empirical Experiment"]
 
-- title: An Sample Paper on Image Processing
+- title: Handwritten·Printed·Digital:film scriptwriting in the Age of the Mobile Vertical Screen
   publishedIn:
-    name: 2020 IEEE Region Symposium (TENSYMP)
-    date: 7 June 2020
-    url: https://example.com
+    name: 2022 NCA (National Communication Association) Conference
+    date: November 2020
+    url: https://www.natcom.org/
   authors:
-  - name: Dr. Madman
-    url: https://example.com
-  - name: Dr. Lessmad
-    url: https://example.com
-  - name: Dr. Moremad
-    url: https://example.com
-  - name: Dr. Goodman
-    url: https://example.com
+  - name: Dr. Ruomu Miao
+  - name: Qingxuan Wang
   paper:
-    summary: Ullamco magna minim cupidatat Lorem ea ex aliqua fugiat et. Dolor quis cillum ea duis irure et commodo aliquip consectetur ullamco labore ut anim nisi. Commodo reprehenderit est consectetur tempor adipisicing occaecat exercitation amet do aliquip dolor do irure. Labore officia ut magna pariatur reprehenderit et ex sit sunt. Magna proident ullamco adipisicing sit.
-    url: https://example.com
-  categories: ["image-processing"]
-  tags: ["Image Processing", "Computer Vision"]
+    summary: This paper explores the evolution of film scriptwriting from handwritten to printed and now to vertical screen formats. It further examines the relationship between screenwriting and creative practices related to the screen media field.
+    url: "files/NCA.pdf"
+  categories: ["qualitative"]
+  tags: ["Focus Group", "Vertical Screen"]
 
-- title: An Example Paper on Security
+- title: The “Deserted” Social Media - Impression Management, Social Exchange, and Context Collapse in Chinese Youth
   publishedIn:
-    name: 2020 IEEE Region Symposium (TENSYMP)
-    date: 7 June 2020
-    url: https://example.com
+    name: 2024 IAMCR (International Association for Media and Communication Research) Conference
+    date: July 15 2024
+    url: https://iamcr.org/
   authors:
-  - name: Dr. Madman
-    url: https://example.com
-  - name: Dr. Lessmad
-    url: https://example.com
-  - name: Dr. Moremad
-    url: https://example.com
-  - name: Dr. Goodman
-    url: https://example.com
-  paper:
-    summary: Dolor ad cupidatat pariatur nulla ipsum ex ullamco nisi anim ullamco. Dolore elit esse in exercitation minim aliqua. Amet velit incididunt magna laboris. Proident reprehenderit deserunt ad officia duis dolor. Tempor nostrud ullamco ullamco sint deserunt cupidatat irure minim consectetur nulla adipisicing sunt.
-    url: https://example.com
-  categories: ["security"]
-  tags: ["Machine Learning", "Autonomous Driving", "Machine Vision"]
+  - name: Qingxuan Wang
+  - name: Prof. Xiaoying Yan
+  paper: 
+    summary: This paper explores how  “mianzi” and “guanxi” (relationship) ties influence Chinese youth's social media use, focusing on impression management and social exchange. It examines the impact of context collapse on their online behavior and the implications for understanding social media dynamics in China.
+    url: "files/MPS-final-abstracts-2024.pdf"
+  categories: ["quantitative"]
+  tags: ["Impression Management", "Social Exchange", "Quantitative Research"]
