--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -39,13 +39,13 @@ projects:
   summary: Found the features that can predict a popular restaurant's open status on Yelp using Logistic Regression. 
   tags: ["class", "machine-learning"]
 
-- name: Digital Satisfaction Index
+- name: 2024 U.S. Digital Satisfaction Index
   logo: /images/sections/projects/dsi.png
   image: /images/sections/projects/sat.png
   role: Assistant Research Analyst
   timeline: "Market Research"
-  url: "https://www.example.com"
-  summary: This market research project aims to measure the Digital Satisfaction Index (DSI) among U.S. internet users and analyze differences across key demographic groups. In addition, the study explores long-term trends in DSI and news trust levels over the past decade.
+  url: https://www.performics.com/digital-satisfaction-index-spotlight-electric-vehicle-purchasing/
+  summary: This market research project measures the Digital Satisfaction Index (DSI) among U.S. internet users and analyze differences across demographic groups. In addition, the study explores long-term trends in DSI and news trust levels over the past decade. The code and result cannot be provided due to confidential reasons. Please find the 2023 report at the link.
   tags: ["professional"]
 
 - name: Online Grocery Data Analysis
@@ -54,7 +54,7 @@ projects:
   role: Developer
   timeline: "Class Project"
   url: https://github.com/Nicole-wqx/Online-Grocery-Data
-  summary: A CRM data analysis using SQL to find the most profitable customer segments by evaluating purchasing behavior, lifetime value, and engagement metrics.
+  summary: A CRM data analysis using SQL to find the most profitable customer segments by evaluating purchasing behavior.
   tags: ["class", "fun"]
 
 - name: From Games to Chats
