--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -55,7 +55,7 @@ socialLinks:
 # For example, you can put link for your resume.
 resourceLinks:
 - title: "My Resume"
-  url: "files/Nicole_Resume_DS.pdf"
+  url: "files/nicole_resume.pdf"
 
 # Show your badges
 # You can show your verifiable certificates from https://www.credly.com.
